--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -25,7 +25,7 @@ const { title = "Rick and Morty" } = Astro.props;
   </head>
   <body class="flex flex-col m-0 h-screen overflow-hidden">
     <Header />
-    <main class="flex-1 bg-gray-100">
+    <main class="flex-1 bg-gray-100 flex">
       <slot />
     </main>
     <style>
@@ -36,17 +36,34 @@ const { title = "Rick and Morty" } = Astro.props;
         @apply text-gray-500 bg-white;
       }
     </style>
-
-    <style is:global>
-      code {
-        font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-          DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
-      }
-    </style>
   </body>
 </html>
 
 <style lang="scss" is:global>
+  code {
+    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+      DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+  }
+
+  input {
+    @apply text-black rounded-sm;
+
+    &::placeholder {
+      @apply text-gray-400;
+    }
+  }
+
+  select {
+    @apply text-black rounded-sm;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml;utf8,<svg fill='lightgray' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+    background-repeat: no-repeat;
+    background-position-x: 98%;
+    background-position-y: 5px;
+  }
+
   .text-with-shadow {
     color: #22a2bd;
     text-shadow: 1px 0px 11px #80fd4c;
@@ -57,7 +74,7 @@ const { title = "Rick and Morty" } = Astro.props;
     @apply overflow-y-scroll;
 
     &::-webkit-scrollbar {
-      width: 6px;
+      width: 10px;
     }
 
     &::-webkit-scrollbar-track {
@@ -71,4 +88,8 @@ const { title = "Rick and Morty" } = Astro.props;
       border-radius: 30px;
     }
   }
+
+  // .info-card-list {
+  //   @apply grid-cols-4;
+  // }
 </style>
