--- a/src/components/header/index.astro
+++ b/src/components/header/index.astro
@@ -3,15 +3,15 @@ import Nav from "@components/nav/index.astro";
 ---
 
 <header
-  class="flex justify-between items-center px-10 bg-white border-b border-gray-200 overflow-hidden"
+  class="flex flex-col sm:flex-row justify-between items-center sm:px-10 bg-white border-b border-gray-200 sm:overflow-hidden"
 >
-  <a href="/" class="flex">
+  <a href="/" class="flex w-full border-b border-gray-200 lg:border-none">
     <img
       src="/images/rick-and-morty-banner.webp"
       alt="Rick and morty banner"
       height="80"
-      width="auto"
-      class="h-20"
+      width=""
+      class="h-fit sm:h-20 mx-auto sm:mx-0"
     />
   </a>
   <Nav />
