--- a/src/layouts/entity.astro
+++ b/src/layouts/entity.astro
@@ -3,7 +3,7 @@ import BaseLayout from "./base.astro";
 ---
 
 <BaseLayout>
-  <div class="flex flex-col h-full">
+  <div class="flex flex-col h-full w-full">
     <div class="flex h-[calc(50vh-85px)] border-b-2 pl-[650px]">
       <div
         class="absolute top-1/2 -mt-[250px] left-20 rounded-full overflow-hidden"
