--- a/src/layouts/all-entries.astro
+++ b/src/layouts/all-entries.astro
@@ -3,7 +3,9 @@ import BaseLayout from "./base.astro";
 ---
 
 <BaseLayout>
-  <div class="flex justify-between gap-14 px-14 pt-10 h-[calc(100vh-70px)]">
+  <div
+    class="flex flex-col w-full md:flex-row justify-between gap-14 px-8 md:px-14 pt-10 md:h-[calc(100vh-70px)]"
+  >
     <slot name="filter-area" />
     <slot name="result-area" />
   </div>
