--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -4,8 +4,9 @@ export interface Props {
 }
 
 import Header from "@components/header/index.astro";
+import { SITE_NAME } from "src/models/constants";
 
-const { title = "Rick and Morty" } = Astro.props;
+const { title = SITE_NAME } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -14,18 +15,20 @@ const { title = "Rick and Morty" } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
     <title>{title}</title>
   </head>
-  <body class="flex flex-col m-0 h-screen overflow-hidden">
+  <body
+    class="flex flex-col m-0 h-full md:h-screen md:overflow-hidden bg-gray-100"
+  >
     <Header />
-    <main class="flex-1 bg-gray-100 flex">
+    <main class="flex-1 flex">
       <slot />
     </main>
     <style>
@@ -40,11 +43,6 @@ const { title = "Rick and Morty" } = Astro.props;
 </html>
 
 <style lang="scss" is:global>
-  code {
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-      DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
-  }
-
   input {
     @apply text-black rounded-sm;
 
@@ -88,8 +86,4 @@ const { title = "Rick and Morty" } = Astro.props;
       border-radius: 30px;
     }
   }
-
-  // .info-card-list {
-  //   @apply grid-cols-4;
-  // }
 </style>
