--- a/src/pages/locations/[id].astro
+++ b/src/pages/locations/[id].astro
@@ -1,5 +1,5 @@
 ---
-import { getRickAndMortyLocationsWithParams } from "src/utils/api";
+import { getRickAndMortyLocation } from "src/utils/api";
 import EntityImagePlaceholder from "../../../public/images/placeholder.png";
 import { Image } from "@astrojs/image/components";
 import EntityLayout from "@layouts/entity.astro";
@@ -8,7 +8,7 @@ import AvatarList from "@components/content/avatar-list.astro";
 
 const { id } = Astro.params;
 
-const matchedLocation = await getRickAndMortyLocationsWithParams(id as string);
+const matchedLocation = await getRickAndMortyLocation(id as string);
 ---
 
 <EntityLayout>
@@ -24,7 +24,7 @@ const matchedLocation = await getRickAndMortyLocationsWithParams(id as string);
   <div
     id="informations"
     slot="informations"
-    class="py-4 pr-4 grid grid-cols-2 gap-y-4 gap-x-8"
+    class="py-4 pr-8 grid grid-cols-2 gap-y-4 gap-x-8"
   >
     <InfoCard title="Type" value={matchedLocation.type} />
     <InfoCard title="Dimension" value={matchedLocation.dimension} />
