--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -63,6 +63,8 @@ const { title = SITE_NAME } = Astro.props;
   }
 
   .text-with-shadow {
+    @apply font-bold;
+
     color: #22a2bd;
     text-shadow: 1px 0px 11px #80fd4c;
     -webkit-text-stroke: 1px black;
