Improve mobile design

--- a/src/components/content/avatar-list.astro
+++ b/src/components/content/avatar-list.astro
@@ -12,7 +12,7 @@ const items: Array<Character> = itemsData.map((x: any) => x.value);
 ---
 
 <ul
-  class="flex-1 flex flex-wrap content-start gap-x-3 gap-y-5 pb-8 pr-6 custom-scrollbar"
+  class="flex-1 flex flex-wrap gap-x-3 gap-y-5 pb-8 sm:pr-6 custom-scrollbar justify-center sm:content-start"
 >
   {
     items.map((item: Character) => (
