--- a/src/components/content/episode-list.astro
+++ b/src/components/content/episode-list.astro
@@ -12,18 +12,18 @@ const episodes: Array<Episode> = episodesData.map((x: any) => x.value);
 ---
 
 <ul
-  class="flex-1 flex flex-col content-start gap-x-3 gap-y-5 pb-8 pr-6 custom-scrollbar"
+  class="flex-1 flex flex-col content-start gap-x-3 gap-y-5 sm:pr-6 custom-scrollbar"
 >
   {
     episodes.map((episode: Episode) => (
       <li>
         <a href={`/episodes/${episode.id}`}>
-          <h4 class="text-2xl font-poppins text-black hover:bg-clip-text hover:text-transparent hover:bg-gradient-to-br hover:to-lime-300 hover:from-cyan-800">
+          <h4 class="text-xl sm:text-2xl font-poppins text-black hover:bg-clip-text hover:text-transparent hover:bg-gradient-to-br hover:to-lime-300 hover:from-cyan-800">
             {episode.name}
           </h4>
         </a>
 
-        <div class="text-lg">
+        <div class="text-base sm:text-lg">
           {episode.episode} - {episode.air_date}
         </div>
       </li>
