--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -25,67 +25,64 @@ const { title = SITE_NAME } = Astro.props;
     <title>{title}</title>
   </head>
   <body
-    class="flex flex-col m-0 h-full md:h-screen md:overflow-hidden bg-gray-100"
+    class="flex flex-col m-0 h-full min-h-screen md:h-screen md:overflow-hidden bg-gray-100"
   >
     <Header />
     <main class="flex-1 flex">
       <slot />
     </main>
-    <style>
+    <style lang="scss" is:global>
       html {
         font-family: system-ui, sans-serif;
         font-size: 14px;
 
-        @apply text-gray-500 bg-white;
+        @apply text-gray-500 bg-gray-100;
+      }
+      input {
+        @apply text-black rounded-sm;
+
+        &::placeholder {
+          @apply text-gray-400;
+        }
+      }
+
+      select {
+        @apply text-black rounded-sm;
+
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        background-image: url("data:image/svg+xml;utf8,<svg fill='lightgray' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+        background-repeat: no-repeat;
+        background-position-x: 98%;
+        background-position-y: 5px;
+      }
+
+      .text-with-shadow {
+        @apply font-bold;
+
+        color: #22a2bd;
+        text-shadow: 1px 0px 11px #80fd4c;
+        -webkit-text-stroke: 1px black;
+      }
+
+      .custom-scrollbar {
+        @apply sm:overflow-y-scroll;
+
+        &::-webkit-scrollbar {
+          width: 10px;
+        }
+
+        &::-webkit-scrollbar-track {
+          background: white;
+          border-radius: 10px;
+          box-shadow: inset 10px 10px 10px 0px #f0f0f0;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background: linear-gradient(170deg, #22a2bd 27%, #80fd4c 64%);
+          border-radius: 30px;
+        }
       }
     </style>
   </body>
 </html>
-
-<style lang="scss" is:global>
-  input {
-    @apply text-black rounded-sm;
-
-    &::placeholder {
-      @apply text-gray-400;
-    }
-  }
-
-  select {
-    @apply text-black rounded-sm;
-
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url("data:image/svg+xml;utf8,<svg fill='lightgray' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-    background-repeat: no-repeat;
-    background-position-x: 98%;
-    background-position-y: 5px;
-  }
-
-  .text-with-shadow {
-    @apply font-bold;
-
-    color: #22a2bd;
-    text-shadow: 1px 0px 11px #80fd4c;
-    -webkit-text-stroke: 1px black;
-  }
-
-  .custom-scrollbar {
-    @apply overflow-y-scroll;
-
-    &::-webkit-scrollbar {
-      width: 10px;
-    }
-
-    &::-webkit-scrollbar-track {
-      background: white;
-      border-radius: 10px;
-      box-shadow: inset 10px 10px 10px 0px #f0f0f0;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background: linear-gradient(170deg, #22a2bd 27%, #80fd4c 64%);
-      border-radius: 30px;
-    }
-  }
-</style>
