--- a/src/layouts/entity.astro
+++ b/src/layouts/entity.astro
@@ -3,22 +3,24 @@ import BaseLayout from "./base.astro";
 ---
 
 <BaseLayout>
-  <div class="flex flex-col h-full w-full">
-    <div class="flex h-[calc(50vh-85px)] border-b-2 pl-[650px]">
+  <div class="flex flex-col sm:h-[calc(100vh-70px)] w-full">
+    <div
+      class="flex flex-col sm:flex-row justify-center lg:justify-start items-center gap-4 sm:gap-10 h-fit sm:h-[calc(50vh-85px)] py-8 px-20 border-b-2 lg:pl-[650px]"
+    >
+      <slot name="image" />
       <div
-        class="absolute top-1/2 -mt-[250px] left-20 rounded-full overflow-hidden"
+        class="mt-2 sm:mt-8 lg:mt-auto sm:mb-10 font-poppins text-5xl sm:text-huge"
       >
-        <slot name="image" />
-      </div>
-      <div class="mt-auto mb-10 font-poppins text-huge">
         <slot name="header" />
       </div>
     </div>
-    <div class="flex flex-1 pl-[650px] [max-height:calc(50vh+15px)]">
-      <div class="w-5/12 border-r-2">
+    <div
+      class="flex flex-col sm:flex-row flex-1 sm:pl-10 lg:pl-[650px] md:[max-height:calc(100vh-70px-282px)] lg:[max-height:calc(50vh+15px)]"
+    >
+      <div class="sm:w-6/12 lg:w-5/12 border-b-2 sm:border-b-0 sm:border-r-2">
         <slot name="informations" />
       </div>
-      <div class="w-7/12">
+      <div class="sm:w-6/12 lg:w-7/12">
         <slot name="other" />
       </div>
     </div>
